# UI-State-DOM-Capture-Multi-Agent

./: README.md
ui_state_capture_agent/: .env  .env.example  README.md  pyproject.toml  requirements.txt
ui_state_capture_agent/scripts/: export_dataset.py  run_task.py
ui_state_capture_agent/src/: config.py  models.py
ui_state_capture_agent/src/agent/: agent_loop.py  app_resolver.py  browser.py  capture.py  dom_scanner.py  llm_client.py  orchestrator.py  planner.py  policy.py  state_diff.py
ui_state_capture_agent/src/server/: api.py
ui_state_capture_agent/src/server/templates/: flow_detail.html  flows_list.html
ui_state_capture_agent/tests/: test_agent_flow.py  test_capture_manager.py  test_dom_scanner_contenteditable.py  test_dom_scanner_snapshot.py  test_policy.py
